--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "hardhat",
+  "name": "MySmartContractTest",
   "version": "1.0.0",
-  "description": "",
+  "description": "1. Node install",
   "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@nomiclabs/hardhat-waffle": "^2.0.6",
-    "chai": "^4.3.8",
-    "ethereum-waffle": "^4.0.10",
-    "ethers": "^5.7.2",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "hardhat": "^2.17.3"
   }
 }
